--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,37 +1,43 @@
 name: Build and publish Docker image
-
 on:
   push:
     branches: [ main ]
     tags: [ 'v*.*.*' ]
   workflow_dispatch:
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+        
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
+        
+      # GitHub Container Registry login
       - name: Log in to GitHub container registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata for Docker
-        id: meta
+      
+      # Docker Hub login
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      # Extract metadata for GitHub Container Registry
+      - name: Extract metadata for GitHub Container Registry
+        id: meta-github
         uses: docker/metadata-action@v4
         with:
           images: ghcr.io/${{ github.repository }}
@@ -40,12 +46,27 @@ jobs:
             type=ref,event=branch
             type=sha,format=short
             latest
-
+      
+      # Extract metadata for Docker Hub
+      - name: Extract metadata for Docker Hub
+        id: meta-dockerhub
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/dapars-docker
+          tags: |
+            type=semver,pattern={{version}}
+            type=ref,event=branch
+            type=sha,format=short
+            latest
+      
+      # Build and push images
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: |
+            ${{ steps.meta-github.outputs.tags }}
+            ${{ steps.meta-dockerhub.outputs.tags }}
+          labels: ${{ steps.meta-github.outputs.labels }}
